--- a/style.css
+++ b/style.css
@@ -1,29 +1,132 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 body{
-    width: 1440px;
+    font-family: "Josefin Sans", sans-serif;
     
 }
 .container{
-    display: flex;
+  width: 1440px;
+  display: flex;
+  margin: auto;
+  border: 1px solid black;
+  background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 20%, 89%));
 }
 .container_left{
-    width: 50%;
-    align-items: center;
-    margin: 3em;
-    padding: 0 1em;
-    font-family: 'Josefin Sans', sans-serif;
+    padding: 0 175px;
+    background-image: url(./images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
+}
+.logo_left{
+    margin-top: 50px;
+}
+.hero-mobile{
+    display: none;
 }
 .title_left{
-    font-weight: 600;
-   color: hsl(0, 93%, 68%);
+    margin-top: 150px;
+    font-weight: 300;
+    font-size: 64px;
+    text-transform: uppercase;
+    color: hsl(0, 36%, 70%);
+    letter-spacing: 18px;
 }
-h1{
+.title_left_sub{
+    color: black;
+    font-weight:600;
+    
+}
+.parrafo_left{
+    margin: 21px 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: hsl(0, 36%, 70%);
+}
+.form_left{
+   position: relative;
+   margin-top: 25px;
+}
+.label_left{
+    width: 80%;
+    height: 50px;
+    padding:0 28px;
+    border-radius: 5ex;
+    border: 1px solid hsl(0, 36%, 70%)
+}
+.label_left::placeholder{
+    color:hsl(0, 36%, 70%) ;
     font-weight: 600;
-  letter-spacing: 1ex;
+}
+.btn_left{
+    position: absolute;
+    right: 25px;
+    width: 100px;
+    height: 50px;
+    cursor: pointer;
+    border: none;
+    border-radius: 30px;
+    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    box-shadow: 0 5px 20px 1px hsl(0, 80%, 86%);
 }
 
-.container_left img{}
-
+.btn_left:hover{
+    box-shadow: 0 5px 5px 1px hsl(0, 80%, 86%);
+    width:120px ;
+    height: 60px;
+}
 .rigth_container{
-width: 50%;
+height: 100%;
+}
+@media screen and (max-width: 480px) {
+    .container{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: auto;
+      border: 1px solid black;
+      background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 20%, 89%));
+    }
+    .hero-mobile{
+        margin-top: 10px;
+        display: block;
+        width: 100%;
+       
+    }
+    .container_left{
+        padding: 0;
+        background-image: url(./images/bg-pattern-desktop.svg);
+        background-repeat: no-repeat;
+    }
+    .logo_left{
+        margin: 6px 0 0 8px;
+    }
+    
+    .title_left{
+        font-size: 46px;
+        margin-top: 54px;
+        font-weight: 300; 
+        text-transform: uppercase;
+        color: hsl(0, 36%, 70%);
+        text-align: center;
+        
+    }
+    .title_left_sub{
+        color: black;
+        font-weight:600;    
+    }
+    .parrafo_left{
+        text-align: center;
+        margin: 21px 0;
+        font-weight: 400;
+        font-size: 16px;
+        color: hsl(0, 36%, 70%);
+    }
+    .rigth_container img{
+        display: none;
+        } 
 }
